[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["adonskoi <donskoy.alexander@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.22.0"

[tool.poetry.dev-dependencies]
memory-profiler = "^0.60.0"
pytest = "^7.1.1"
mypy = "^0.942"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
